# fitness-coach-bot

./: .replit  Procfile  TEST_BOT_README.md  feedback.json  progress.json  pyproject.toml  requirements.txt  run_aws_bot.py  test_bot.py  users.json
.github/workflows/: python-app.yml
FitnessCoachBot2/: .replit  active_workouts.json  bot.py  config.py  database.py  feedback.json  handlers.py  keyboards.py  messages.py  progress.json  pyproject.toml  reminder.py  reminders.json  users.json  workout_manager.py
attached_assets/: Pasted-ERROR-telegram-ext-Application-No-error-handlers-are-registered-logging-exception-Traceback-most--1740741684206.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pa-1740499557662.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pa-1740500087721.txt
fitness_coach_bot/: .env.test  active_workouts.json  bot.py  bot_persistence  check_test_bot.py  config.py  database.py  feedback.json  handlers.py  keyboards.py  messages.py  payment_manager.py  payment_webhook.py  progress.json  pyproject.toml  reminder.py  reminders.json  run_test_bot.py  run_test_bot_no_sheets.py  run_test_bot_with_webhook.py  sheets_service.py  test_payment_webhook.py  test_sheets.py  test_workout.py  users.json  workout_manager.py
fitness_coach_bot/attached_assets/: Pasted-n-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-1739746125226.txt  exercises - Sheet1 (1).csv
tests/: __init__.py  test_basic.py
(+2 files in other folders)
