[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pandas>=2.2.3",
    "python-telegram-bot[job-queue]==20.7",
    "schedule>=1.2.2",
    "sendgrid>=6.11.0",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
]
